--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.13.4",
     "md5": "^2.1.0",
     "moment": "^2.18.1",
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "node-sass": "^4.5.3"
   },
   "devDependencies": {
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "rerun-script": "^0.6.0"
   }
 }
