--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "md5": "^2.1.0",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
-    "node-sass": "^4.5.3"
+    "node-sass-middleware": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2",
